--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.8.0
-  hive_generator: ^0.7.0+2
+  build_runner: ^1.10.11
+  hive_generator: ^0.8.2
 
 flutter:
 
