--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   path_provider: ^1.6.24
   provider: ^4.3.2+2
   shared_preferences: ^0.5.12+4
-
+  grouped_list: ^3.7.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
